--- a/src/pages/Apod.css
+++ b/src/pages/Apod.css
@@ -23,3 +23,9 @@
 .content > img {
     height: 50vh;
 }
+
+@media screen and ( max-width: 800px) {
+    .content > img {
+        height: 30vh;
+    }
+}
