--- a/src/pages/Mars.css
+++ b/src/pages/Mars.css
@@ -15,3 +15,9 @@
 .content2 > img {
     height: 50vh;
 }
+
+@media screen and ( max-width: 800px) {
+    .content2 > img {
+        height: 30vh;
+    }
+}
